FIx state-label align

--- a/app/assets/stylesheets/generic/issue_box.scss
+++ b/app/assets/stylesheets/generic/issue_box.scss
@@ -103,9 +103,10 @@
 
   .state-label {
     font-size: 14px;
-    padding: 9px 25px;
+    padding: 1px 25px;
     text-align: center;
     text-shadow: none;
     margin-right: 20px;
+    display: inline-block;
   }
 }
